<resources>
    <string name="app_name">Eye Rest Lock</string>
    <string name="channel_name">EWAEH EyeRest Service</string>
    <string name="close_button">Cannot Close Yet</string>
    <string name="close_button_ready">Ready To Close</string>

    <string name="close_settings_button">Close</string>
    <string name="test_button">Test</string>
    <string name="credit_button">Credits</string>
    <string name="passcode_ok_button">Ok</string>
    <string name="tv_input_passcode">Please input passcode</string>
    <string name="time_info">After %s minutes Please Look %s feets away for %s seconds. Please DO NOT stare at the count down ^_^. This Refreshes every %s seconds. DO NOT look at me.</string>
    <string name="custom_reminder_string">Custom reminder string</string>
    <string name="second_remain">%s Seconds Remain</string>
    <string name="title_activity_main">Eye Rest Lock</string>
    <string name="title_activity_settings">Eye Rest Lock</string>
    <string name="tv_overlay_info">We need draw over other app permission to start from background and block the screen.</string>
    <string name="goto_overlay_perm_button">Go to settings</string>
    <string name="credit_thanks">Icon made by Freepik from www.flaticon.com</string>

    <!-- Preference -->
    <string name="preference_title">Time Settings</string>
    <string name="screen_lock_interval_minutes">Screen on minutes before lock</string>
    <string name="eye_rest_second">Second to rest during the lock</string>
    <string name="eye_look_alway_num">Distance to look away in reminder</string>
    <string name="eye_lock_passcode">Pass code</string>
    <string name="eye_look_use_overlay_widget">Use overlay widget</string>
    <string name="count_down_refresh_second">Count down refresh seconds during the lock</string>
    <string name="title_activity_credit_setting">Credits and Thanks</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>