<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

	<TextView
		android:id="@+id/tv_overlay_info"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom|center"
		android:text="@string/tv_overlay_info"
		android:textSize="36sp" />

    <Button
        android:id="@+id/goto_overlay_perm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goto_overlay_perm_button" />

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <Button
        android:id="@+id/test_screenlock_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/test_button" />
</LinearLayout>